Logout, Refresh Token APIs have been completed Also Swagger documentation and README.md documentation for how to interact with APIs has been updating
